# Install test-script
install(PROGRAMS run-target_cert_hal_video_hal.sh DESTINATION ${CMAKE_INSTALL_VIDEO_HAL_TEST})
install(PROGRAMS sample_img_CARPLAY.png DESTINATION ${CMAKE_INSTALL_VIDEO_HAL_TEST}/certification-program)
install(PROGRAMS sample_img_MAP.png DESTINATION ${CMAKE_INSTALL_VIDEO_HAL_TEST}/certification-program)
install(PROGRAMS sample_img_CARPLAY_square.png DESTINATION ${CMAKE_INSTALL_VIDEO_HAL_TEST}/certification-program)
install(PROGRAMS sample_img_DTV.png DESTINATION ${CMAKE_INSTALL_VIDEO_HAL_TEST}/certification-program)
install(PROGRAMS sample_img_DTV_square.png DESTINATION ${CMAKE_INSTALL_VIDEO_HAL_TEST}/certification-program)
install(PROGRAMS sample_img_COLOR_BAR.png DESTINATION ${CMAKE_INSTALL_VIDEO_HAL_TEST}/certification-program)
install(PROGRAMS sample_img_AA.png DESTINATION ${CMAKE_INSTALL_VIDEO_HAL_TEST}/certification-program)
install(PROGRAMS sample_img_CLEAN.png DESTINATION ${CMAKE_INSTALL_VIDEO_HAL_TEST}/certification-program)
install(PROGRAMS sample_img_CAMERA.png DESTINATION ${CMAKE_INSTALL_VIDEO_HAL_TEST}/certification-program)
install(PROGRAMS sample_img_CAMERA2.png DESTINATION ${CMAKE_INSTALL_VIDEO_HAL_TEST}/certification-program)
install(PROGRAMS sample_img_CAMERA3.png DESTINATION ${CMAKE_INSTALL_VIDEO_HAL_TEST}/certification-program)
install(PROGRAMS sample_img_CAMERA4.png DESTINATION ${CMAKE_INSTALL_VIDEO_HAL_TEST}/certification-program)
install(PROGRAMS sample_img_CAMERA5.png DESTINATION ${CMAKE_INSTALL_VIDEO_HAL_TEST}/certification-program)
install(PROGRAMS sample_img_HDMI.png DESTINATION ${CMAKE_INSTALL_VIDEO_HAL_TEST}/certification-program)
install(PROGRAMS sample_img_HDMI2.png DESTINATION ${CMAKE_INSTALL_VIDEO_HAL_TEST}/certification-program)
install(PROGRAMS sample_img_HDMI3.png DESTINATION ${CMAKE_INSTALL_VIDEO_HAL_TEST}/certification-program)
install(PROGRAMS sample_img_HDMI4.png DESTINATION ${CMAKE_INSTALL_VIDEO_HAL_TEST}/certification-program)
install(PROGRAMS sample_img_HDMI5.png DESTINATION ${CMAKE_INSTALL_VIDEO_HAL_TEST}/certification-program)
install(PROGRAMS ../../video_hal_tp/data/Startup_Toyota_Global_1280x720.mp4 DESTINATION ${CMAKE_INSTALL_VIDEO_HAL_TEST}/certification-program)
